# chatting-program

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.c
client/include/: clientData.h  interface.h
client/src/: interface.c  main.c
server/: CMakeLists.txt  main.c
server/include/: interface.h  serverData.h
server/src/: interface.c  main.c  serverData.c
